Thu Nov 30 13:54:10 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/qtest.cc: Change include from iostream to iostream.h

	* htsearch/DocMatch.cc: Change include from iostream to iostream.h

	* htsearch/Display.cc (createURL, buildMatchList, excerpt, hilight):
	Clean up code to get rid of warnings, especially resulting from
	NULLs in ternary operators.

Thu Nov 30 10:55:09 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/String_fmt.cc (form, vform): Use vsnprintf rather than
	vsprintf, for buffer overflow prevention if vsnprintf available.

	* htdig/Retriever.cc: Remove unused strptime declaration.

	* htlib/HtDateTime.cc: Use mystrptime if HAVE_STRPTIME not set.

Wed Nov 29 23:31:10 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdb/htdb_stat.cc, htdb_load.cc, htdb_dump.cc: Make sure we
	include htconfig.h to include proper declarations.

	* htlib/strptime.cc: Change to strptime.cc, from htdig-3.1 series
	hopefully more portable until I can find a more suitable
	replacement.

	* htlib/Makefile.am, htlib/Makefile.in: As above.

	* htlib/clib.h, htlib/lib.h: Ditto.

	* htdoc/all.html: Add a first draft of program summaries.

Wed Nov 29 18:00:15 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (parse_url): Remove undeclared "dup" variable,
	add missing calls to words.Skip().

Wed Nov 29 17:44:56 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/htdig.html: Add description of -v output.

Mon Nov 27 12:03:34 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/md5.cc: Added missing include of time.h

Fri Nov 24 00:56:01 2000  Toivo Pedaste <toivo@ucs.uwa.edu.au>

	* htsearch/Display.cc: Some extra debugging for scoring

Sun Nov 19 00:56:01 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htnet/HtFile.cc (Request): Use opendir/readdir instead of
	scandir for generating directory listings on-the-fly.

	* htdoc/RELEASE.html: Write up release notes for 3.2.0b3.
