@@ -1,4 +1,7 @@
-Thu Nov 30 13:54:10 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Thu Nov 30 14:01:48 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/strptime.cc, htlib/lib.h: make first 2 args to strptime
+	const to avoid warnings, use cast in asizeof to avoid warnings.
 
 	* htsearch/qtest.cc: Change include from iostream to iostream.h
 
